feat: modified payment pages

--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -19,11 +19,16 @@ html {
 }
 
 .red {
-   color: red;
+   color: red !important;
 }
 
 .green {
-   color: green;
+   color: green !important;
+}
+
+.inline {
+   font-size: inherit;
+   display: inline;
 }
 
 .colored {
